manifests/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: python-app-deployment
  labels:
    app: python-app
    department: data-engineering
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
      department: data-engineering
  template:
    metadata:
      labels:
        app: python-app
        department: data-engineering
    spec:
      containers:
        - name: python-app
          image: asia.gcr.io/data-services-asia-dev/python-app:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /heartbeat
              port: 8080
          resources:
            requests:
              memory: 200Mi
              cpu: 100m
            limits:
              memory: 512Mi
              cpu: "1"
