manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-flask-service
spec:
  type: NodePort
  selector:
    app: python-app
    department: data-engineering
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
