manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: python-app-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: python-service-ip-address
    networking.gke.io/managed-certificates: dev-certificate
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: python-flask-service
          servicePort: 80
